zero-schema-macros/tests/ui/fail/04_tag_field_syntax.stderr
error: tag_field `missing` does not name a sibling field
 --> tests/ui/fail/04_tag_field_syntax.rs:5:24
  |
5 |     #[zero(tag_field = missing)]
  |                        ^^^^^^^
